...
        </View>
      </View>
    </View>
  );

  return (
    <Screen testID="merchant-detail-screen" scrollable={false}>
      <Header testID="merchant-detail-header" />
      <FlashList
        className="flex-1"
        data={listings ?? []}
        keyExtractor={(item) => item.id}
        estimatedItemSize={140}
...
